<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demo_ZXing</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="click">点击生成二维码</string>
	<string name="qhicon">点击切换中间的小图片</string>
	<string name="et_hint">请输入内容</string>
	<string name="foreground">设置前景色</string>
	<string name="background">设置背景色</string>
</resources>
