<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip">

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="下一页" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:onClick="onQJS"
            android:text="@string/foreground" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:onClick="onBJS"
            android:text="@string/background" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="提示:	前景色要比背景色深！" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_margin="5dip"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/app_logo" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_margin="5dip"
            android:onClick="onQHI"
            android:text="@string/qhicon" />
    </LinearLayout>

    <com.lidynast.demo_zxing.ClearEditText
        android:id="@+id/et"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_margin="5dip"
        android:hint="@string/et_hint"
        android:maxLines="1"
        android:padding="5dip" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_margin="5dip"
        android:onClick="onSC"
        android:text="@string/click" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_margin="10dip"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside" />
</LinearLayout>
